# BSUIR

./: README.md
term1/: README.md
term1/LAB0/: 1.2.c  1.3.c
term1/LAB3/: LAB3.c  function.h
term1/LAB4/: LAB4.c
term1/LAB5/: arrays.c  main.c
term1/LAB6/: header.h
term1/LAB7/: header.h  main.c
term1/LAB8/: main.c
term1/labs/LAB0/: 1.4.c
term1/labs/LAB1/: 1.1.c
term1/labs/LAB2/: 2.1.c  2.2.c  2.3.c
term1/labs/LAB4/: arrays.h
term1/labs/LAB5/: header.h
term1/labs/LAB6/: functions.c  main.c
term1/labs/LAB7/: functions.c
term1/labs/LAB8/: functions.c  header.h
term1/sources/: desktop.ini
term2/: CMakeLists.txt  README.md  sonar-project.properties
term2/labs/lab1/: functions.c  header.h  main.c
term2/labs/lab2/compressor/: compression.c  header.h  main_compressor.c
term2/labs/lab2/decompressor/: decompression.c  header.h  main_decompressor.c
term2/labs/lab3/image_editor/: header.h  main.c  processing_options.c
term2/labs/lab4/akinator/: functions.c  header.h  main.c
term2/labs/lab5/: functions.c  header.h  main.c
term2/sources/: DNS.txt  database.txt
term3/: Array.cpp  Array.h  ClassDiagram.cd  README.md  functions.h
term3/labs/lab1/: functions.cpp  lab1.cpp
term3/labs/lab2/: README.md  String.cpp  String.h  main.cpp
term3/labs/lab3/: Educator.h  Educator.inl  EducatorPartyMember.h  EducatorPartyMember.inl  Human.h  Human.inl  PartyMember.cpp  PartyMember.inl  README.md  main.cpp
term3/labs/lab4/: Interface.cpp  Interface.h  README.md  Ring.cpp  Ring.h  main.cpp
term4/: README.md
term4/ОСиСП/: README.md
(+15 files in other folders)
